<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".GameScreen">

    <ImageView
        android:id="@+id/gameMap"
        android:layout_width="409dp"
        android:layout_height="493dp"
        android:contentDescription="@string/gameMap"
        android:scaleType="centerCrop"
        android:src="@drawable/game_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="7dp"
        android:text="@string/playerName"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sprite"
        android:layout_width="152dp"
        android:layout_height="198dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/sprite"
        android:src="@drawable/chicken"
        app:layout_constraintEnd_toStartOf="@+id/startingLives"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startingPoint"
        app:layout_constraintTop_toBottomOf="@+id/Difficulty"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/playButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:shadowColor="#0B0000"
        android:text="@string/playButton"
        android:textDirection="firstStrong"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668"
        app:strokeColor="#F44336" />

    <TextView
        android:id="@+id/startingLives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="141dp"
        android:layout_marginBottom="16dp"
        android:background="#EE3F07"
        android:paddingHorizontal="6dp"
        android:paddingVertical="4dp"
        android:text="@string/startingLives"
        android:textColor="#212121"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gameMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sprite"
        app:layout_constraintTop_toBottomOf="@+id/playerName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/startingPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#ED3F07"
        android:paddingHorizontal="6dp"
        android:paddingVertical="4dp"
        android:text="@string/startingPoint"
        android:textColor="#212121"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gameMap"
        app:layout_constraintEnd_toStartOf="@+id/sprite"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="165dp"
        android:background="#EF3F07"
        android:paddingHorizontal="6dp"
        android:paddingVertical="4dp"
        android:text="@string/difficulty"
        android:textColor="#212121"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sprite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName" />

</androidx.constraintlayout.widget.ConstraintLayout>